# siamese-neural-image-diff

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
scripts/: compare.py  train.py
src/siamese_diff/: dataset.py  model.py
src/siamese_image_diff.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
